# airport-data-project

./: .gitignore  Questions.md  Todo.md  compose.yaml  docker-compose.yaml  main.py  notes.md  pyproject.toml  requirements.txt  show_size.sh
Portfolio/: Project Overview.md
Portfolio/Journal/: 1. Starting the Project.md  2. Writing the Scraper.md  3. Setting up on Azure.md  4. Add Basic Validation at RAW level.md  5. Initial data processing.md  6. Orchestration.md  7. Creating DBT Azure Function.md
airportdbt/: dbt_project.yml  test.duckdb  test.py
airportdbt/seeds/: missing_airlines.csv
azure-function-dbt/: db.duckdb  function_app.py  requirements.txt  test.py
azure-function-dbt/airportdbt/: .user.yml  dbt_project.yml  profiles.yml
azure-function-scraper/: function_app.py
azure-function-scraper/scraper/: adl_airport.py  bri_airport.py  config.py  mel_airport.py  per_airport.py  run_all_linux.sh  utils.py
azure-functions/: function_app.py  requirements.txt
azure-functions/scraper/: adl_airport.py  bri_airport.py  bris_airport.py  config.py  mel_airport.py  melb_airport.py  per_airport.py  (+5 more)
docker/: Dockerfile.scraper
dockerfiles/: Dockerfile.flight_scraper
flightsdbt/: dbt_project.yml
scraper/: adl_airport.py  bri_airport.py  bris_airport.py  mel_airport.py  melb_airport.py  per_airport.py  run_all.sh  run_all_linux.sh  syd_airport.py  syd_airport_pipeline.py  test.py  test_syd_airport.ipynb  upload_existing.py  utils.py
scripts/: rename-sydney.sh  scrape_script.sh
sql/: check_duplicates.sql
streamlit/: Home.py
terraform/: gcp-main.tf
(+23 files in other folders)
